# WikECD

./: .gitignore  LICENSE  MANIFEST.in  Makefile  __init__.py  amit_verma.html  cli.py  contact.php  index.html  k_experiments_random.py  logger.py  pyproject.toml  readme.md  readme.txt  script.py  setup.cfg  t.py  t_k_checkpoints.py  test_script.py
.github/workflows/: release.yml
analytics/: analyze.py
assets/css/: main.css
cli_helpers/: dump_sweeper.py
compression/: compressor.py  diff_utils.py  knapsack.py  knapsack_heuristic.py  metrics.py  partitioner.py
css/: style.default.css  style.green.css  style.lightblue.css  style.pink.css  style.red.css  style.turquoise.css  style.violet.css
examples/: compress_api.py
experiments/: ex_test_compression.py  retrieval.py
img/gallery/: Thumbs.db
js/: front.js
manuscript/: sample-acmsmall-submission.tex  sample-base.bib
retrieval/: query.py  retrieval.py
sources/: api_client.py  base.py  bz2_page_index.py  dump_locator.py  dump_utils.py  fast_page_reader.py  xml_parser.py
storage/: compressed_store.py  serializer.py
testing/: test_compression.py  test_retrieval.py  test_sources.py  test_xml_stream_bz2.py
testing/data/: sample_history.xml
tests/: Britomart_Redeems_Faire_Amoret.knolml  Britomart_Redeems_Faire_Amoret.xml  experiment_with_size_and_time.py  index.txt  k_experiments.py  k_experiments_wrtk.py  mapping.py  non-consecutive_greedy.py  test.py  test_readme.md  wiki_compressor.py  wiki_compressor_decompressor_diff_match_patch.ipynb  wiki_compressor_diff_match.py
tests/Canberra_test/: Canberra_report.ipynb
tests/results/: bar_plot.py  plot2.py  plots.py  report_n-1_full.csv  report_newk_full.csv  report_newk_random.csv  report_one_full.csv  report_rootn_full.csv  report_rootn_random.csv  report_rootn_thousand.csv  retrieval_k_checkpoints.py  script.py  t_k_checkpoints.py
tests/results/n-1/: report_n-1_full.csv  report_n-1_random.csv
tests/results/newk/: report_newk_full.csv
tests/results/one/: report_one_random.csv
tests/results/thousand/: report_rootn_thousand.csv  report_thousand_full.csv
wikecd/: knapSack_compression_test.py  retrieval.py  retrieval_kth.py  test_compression.py  wiki_edit_history_20200901.txt
wikecd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
