[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wikecd"
version = "0.1.1"
description = "Wikipedia Efficient Compression & Decompression (WikECD): optimal revision partitioning, fast retrieval, and analytics."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Amit Verma" }]
keywords = ["wikipedia", "compression", "delta", "knapsack", "bzip2", "revision history"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: System :: Archiving :: Compression",
  "Topic :: Text Processing :: Markup :: XML",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
]


dependencies = [
  "requests>=2.28",
  "urllib3>=1.26,<3.0",
  "lxml>=4.9",
  "indexed_bzip2>=1.4",
  "tqdm>=4.66",
  "python-dateutil>=2.8.2",
  "diff-match-patch>=20200713",
  "matplotlib>=3.8",
  "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/youruser/WikECD"
Issues   = "https://github.com/youruser/WikECD/issues"

[project.scripts]
wikecd = "WikECD.cli:main"

# ---- SINGLE setuptools block (do not duplicate below) ----
[tool.setuptools]
include-package-data = true
packages = [
  "WikECD",
  "WikECD.sources",
  "WikECD.compression",
  "WikECD.retrieval",
  "WikECD.storage",
  "WikECD.cli_helpers",
  "WikECD.analytics",
]

[tool.setuptools.package-dir]
"WikECD" = "."
"WikECD.sources" = "sources"
"WikECD.compression" = "compression"
"WikECD.retrieval" = "retrieval"
"WikECD.storage" = "storage"
"WikECD.cli_helpers" = "cli_helpers"
"WikECD.analytics" = "analytics"

