[metadata]
name = wikecd
version = 0.1.0
author = Amit Verma
author_email = amitverma@example.com
description = Wikipedia Efficient Compression & Decompression library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/<yourusername>/WikECD
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Topic :: Text Processing :: Markup :: XML
    Topic :: Database :: Database Engines/Servers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    requests
    lxml
    tqdm
    indexed_bzip2
    matplotlib
    numpy
    diff-match-patch
    python-dateutil

[options.entry_points]
console_scripts =
    wikecd = WikECD.cli:main

